--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.11.15",
     "lucide-react": "^0.456.0",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.4",
