--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -58,6 +59,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
