--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
