--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
@@ -67,6 +68,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
