--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-google-maps/api": "^2.20.3",
+    "@types/qrcode.react": "^1.0.5",
     "@uploadthing/react": "^7.1.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -40,6 +41,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.15",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "14.2.13",
@@ -52,6 +54,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.15",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
