--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-google-maps/api": "^2.20.3",
+    "@tanstack/react-table": "^8.20.6",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/qrcode.react": "^1.0.5",
     "@uploadthing/react": "^7.1.2",
     "axios": "^1.7.7",
