--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/qrcode.react": "^1.0.5",
     "@uploadthing/react": "^7.1.2",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
